# ros2-robot-digital-twin

./: .gitignore  README.md
archive/robot_status_api_bridge_legacy/: README.md  package.xml  setup.cfg  setup.py
archive/robot_status_api_bridge_legacy/robot_status_api_bridge/: mqtt_status_publisher.py  payload_builder.py  status_bridge_node.py
docs/: dashboard-integration.md  data-flow.md  dataflow.md  hardware_wiring.md  microros_agent_startup.md  motor_closed_loop_tuning_process.md  motor_control_design.md  motor_dashboard_interface.md  motor_dashboard_progress_2026_05_20.md  pre_n20_regression_check.md  resume-bullets.md  robot_ops_dashboard_handoff.md  troubleshooting_log.md
docs/skills/: motor_closed_loop_tuning_skill.md
firmware/esp32_microros_bridge/: .gitignore  Debug.md  README.md  design.md  platformio.ini  start_static.sh
firmware/esp32_microros_bridge/docs/: design.md  (+3 more)
firmware/stm32_sensor_node/: .mxproject  CMakeLists.txt  README.md  design.md  robot-state-monitor.ioc
ros2/imu_data_logger/: README.md  package.xml  setup.cfg  setup.py
ros2/imu_data_logger/imu_data_logger/: live_plot_node.py  logger_node.py
ros2/imu_data_logger/test/: test_pep257.py
ros2/robot_mqtt_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2/robot_state_monitor/: Debug.md  README.md  package.xml  setup.cfg  setup.py  start_static.sh
ros2/robot_state_monitor/launch/: mpu6050_gazebo.launch.py  mpu6050_gazebo_gui.launch.py
ros2/robot_state_monitor/models/: mpu6050.sdf  robot_model.sdf
ros2/robot_state_monitor/robot_state_monitor/: robot_gazebo_bridge.py
ros2/robot_state_monitor/worlds/: empty.sdf
ros2/robot_status_api_bridge/: README.md  package.xml  setup.py
scripts/: check_microros_topics.sh  check_motor_dashboard_loop.sh  check_real_hw_chain.sh  start_microros_agent_udp.sh  start_motor_dashboard_stack.sh
(+81 files in other folders)
