<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_data_logger</name>
  <version>0.2.0</version>
  <description>ROS 2 IMU telemetry logger and live plot analysis tools.</description>
  <maintainer email="yinawl107@gmail.com">ina</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-matplotlib</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
